--- a/devel/themes/igames/template.html
+++ b/devel/themes/igames/template.html
@@ -1,4 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html dir="{LANG_DIR}">
 <head>
 <title>{TITLE}</title>
@@ -29,8 +30,8 @@ function MM_showHideLayers() { //v6.0
 </head>
 <body>
   {CUSTOM_HEADER}
-  <div id="Menu1" style="position:absolute; width:800px; height:30px; z-index:1; left: 20px; top: 100px; visibility: hidden;">
-    <span class="topmenu">
+  <div id="Menu1" class="topmenu" style="position:absolute; width:800px; height:30px; z-index:1; left: 20px; top: 100px; visibility: hidden;">
+    
       <table border="0" cellpadding="0" cellspacing="0">
         <tr>
           <td>
@@ -38,21 +39,21 @@ function MM_showHideLayers() { //v6.0
           </td>
         </tr>
       </table>
-    </span>
+   
   </div>
   <table border="0" cellpadding="0" cellspacing="0" width="100%" class="top_panel">
     <tr>
       <td>
         <table border="0" cellpadding="0" cellspacing="0" width="100%">
         <tr>
-          <td background="themes/igames/images/top_panel_r1_c1.jpg">
+          <td width="501px" class="top_panel_left">
             <h1>{GAL_NAME}</h1>
             <h3>{GAL_DESCRIPTION}</h3>
           </td>
-          <td background="themes/igames/images/top_panel_r1_c4.jpg" >
-            <img src="../../images/spacer.gif" width="1" height="70" border="0" alt="" />
+          <td style="background-image: url(themes/igames/images/top_panel_r1_c4.jpg);">
+            &nbsp;
           </td>
-          <td width="50%" background="themes/igames/images/top_panel_r1_c4.jpg" valign="center" align="right">
+          <td width="273px" class="top_panel_right" valign="middle" align="right">
             {THEME_SELECT_LIST}
             {LANGUAGE_SELECT_LIST}
           </td>
@@ -67,19 +68,19 @@ function MM_showHideLayers() { //v6.0
             <td>
               <img name="top_panel_r2_c1" src="themes/igames/images/top_panel_r2_c1.jpg" width="20" height="35" border="0" id="top_panel_r2_c1" alt="" />
             </td>
-            <td background="themes/igames/images/top_panel_r2_c2.jpg">
+            <td class="top_panel_bgd">
               {MAIN_MENU2}
             </td>
-            <td width="100%" background="themes/igames/images/top_panel_r2_c3.jpg" style="background-repeat:no-repeat;background-position:right;">
+            <td width="100%" class="top_panel_btm">
             </td>
           </tr>
         </table>
       </td>
     </tr>
   </table>
-  <table width="100%" border="0" cellspacing="0" cellpadding="20">
+  <table width="100%" border="0" cellspacing="0" cellpadding="23">
     <tr>
-      <td align="center">
+      <td align="left">
       {ADMIN_MENU}
       {GALLERY}
       </td>
@@ -89,5 +90,19 @@ function MM_showHideLayers() { //v6.0
   {LANGUAGE_SELECT_FLAGS}
   <br />
   {CUSTOM_FOOTER}
+ <!--  The buttons below are to show this theme is xhtml 1 transitional and css compliant.  If you have made no changes to your theme or code, you can un-comment them.  If you have made modifications, you must check that your site still validates before use of these buttons -->
+
+<!--
+  <div align="center"><p>
+  <a href="http://validator.w3.org/check?uri=referer"><img
+          src="http://www.w3.org/Icons/valid-xhtml10"
+          alt="Valid XHTML 1.0!" style="border:0;width:88px;height:31px" /></a>
+      
+		  <a href="http://jigsaw.w3.org/css-validator/">
+  <img style="border:0;width:88px;height:31px"
+       src="http://jigsaw.w3.org/css-validator/images/vcss" 
+       alt="Valid CSS!" />
+ </a>
+ </p></div> -->
 </body>
 </html>
