--- a/devel/themes/igames/template.html
+++ b/devel/themes/igames/template.html
@@ -29,80 +29,53 @@ function MM_showHideLayers() { //v6.0
 <!-- $Id$ -->
 </head>
 <body>
+<div id="CUSTOM_HEADER">
   {CUSTOM_HEADER}
-  <div id="Menu1" class="topmenu" style="position:absolute; width:800px; height:30px; z-index:1; left: 20px; top: 100px; visibility: hidden;">
-    
-      <table border="0" cellpadding="0" cellspacing="0">
-        <tr>
-          <td>
-            {MAIN_MENU1}
-          </td>
-        </tr>
-      </table>
-   
   </div>
-  <table border="0" cellpadding="0" cellspacing="0" width="100%" class="top_panel">
-    <tr>
-      <td>
-        <table border="0" cellpadding="0" cellspacing="0" width="100%">
-        <tr>
-          <td width="501px" class="top_panel_left">
-            <h1>{GAL_NAME}</h1>
-            <h3>{GAL_DESCRIPTION}</h3>
-          </td>
-          <td style="background-image: url(themes/igames/images/top_panel_r1_c4.jpg);">
-            &nbsp;
-          </td>
-          <td width="273px" class="top_panel_right" valign="middle" align="right">
-            {THEME_SELECT_LIST}
-            {LANGUAGE_SELECT_LIST}
-          </td>
-        </tr>
-        </table>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        <table border="0" cellpadding="0" cellspacing="0" width="100%">
-          <tr>
-            <td>
-              <img name="top_panel_r2_c1" src="themes/igames/images/top_panel_r2_c1.jpg" width="20" height="35" border="0" id="top_panel_r2_c1" alt="" />
-            </td>
-            <td class="top_panel_bgd">
-              {MAIN_MENU2}
-            </td>
-            <td width="100%" class="top_panel_btm">
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-  <table width="100%" border="0" cellspacing="0" cellpadding="23">
-    <tr>
-      <td align="left">
+  
+
+  
+<div class="top_panel">
+  <div class="top_panel_left">
+    <div class="top_panel_right">
+      <div id="SELECT_LISTS">
+        {THEME_SELECT_LIST}
+        {LANGUAGE_SELECT_LIST}
+      </div>
+      <h1>{GAL_NAME}</h1>
+      <h3>{GAL_DESCRIPTION}</h3>
+    </div>
+  </div>
+</div>
+
+<div class="top_panel_btm">
+
+</div>
+
+
+<div id="MENUS">
+  <div id="SUB_MENU">
+    {SUB_MENU}
+  </div>
+  <div id="SYS_MENU">
+    {SYS_MENU}
+  </div>
+</div>
+
+
+<div id="GALLERY">
       {ADMIN_MENU}
       {GALLERY}
-      </td>
-    </tr>
-  </table>
-  <p>&nbsp;</p>
-  {LANGUAGE_SELECT_FLAGS}
-  <br />
+</div>
+<div id="SELECT_FLAGS">
+ {LANGUAGE_SELECT_FLAGS}
+ </div>
+ <div id="CUSTOM_FOOTER">
   {CUSTOM_FOOTER}
- <!--  The buttons below are to show this theme is xhtml 1 transitional and css compliant.  If you have made no changes to your theme or code, you can un-comment them.  If you have made modifications, you must check that your site still validates before use of these buttons -->
+  </div>
+  <div id="VANITY">
+  {VANITY}
+  </div>
 
-<!--
-  <div align="center"><p>
-  <a href="http://validator.w3.org/check?uri=referer"><img
-          src="http://www.w3.org/Icons/valid-xhtml10"
-          alt="Valid XHTML 1.0!" style="border:0;width:88px;height:31px" /></a>
-      
-		  <a href="http://jigsaw.w3.org/css-validator/">
-  <img style="border:0;width:88px;height:31px"
-       src="http://jigsaw.w3.org/css-validator/images/vcss" 
-       alt="Valid CSS!" />
- </a>
- </p></div> -->
 </body>
 </html>
