--- a/devel/themes/eyeball/template.html
+++ b/devel/themes/eyeball/template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html dir="{LANG_DIR}">
 <head>
 <title>{TITLE}</title>
@@ -29,84 +29,80 @@ function MM_showHideLayers() { //v6.0
 </head>
 <body>
   {CUSTOM_HEADER}
-  <div id="Menu1" style="position:absolute; width:780px; height:30px; z-index:1; left: 22px; top: 47px; visibility: hidden;">
-    <span class="topmenu">
-      <table border="0" cellpadding="0" cellspacing="0">
-        <tr>
-          <td>
-            {MAIN_MENU1}
-          </td>
-        </tr>
-      </table>
-    </span>
-  </div>
   <table border="0" cellpadding="0" cellspacing="0" width="100%" class="top_panel">
     <tr>
       <td>
         <table border="0" cellpadding="0" cellspacing="0" width="100%">
           <tr>
-            <td width="49%" background="themes/eyeball/images/top_background_r1_c1.gif">
-            </td>
+            <td width="49%" style="background-image:url(themes/eyeball/images/top_background_r1_c1.gif);"></td>
+
             <td width="2%">
               <table border="0" cellpadding="0" cellspacing="0" width="100%">
                 <tr>
                   <td>
-                    <table border="0" cellpadding="0" cellspacing="0" width="100%">
-                      <tr>
-                        <td>
-                          <img name="top_background_r1_c2" src="themes/eyeball/images/top_background_r1_c2.gif" width="135" height="17" border="0" id="top_background_r1_c2" alt="" />
-                        </td>
-                        <td width="100%" background="themes/eyeball/images/top_background_r1_c4.gif">
-                        </td>
-                        <td>
-                          <img name="top_background_r1_c5" src="themes/eyeball/images/top_background_r1_c5.gif" width="135" height="17" border="0" id="top_background_r1_c5" alt="" />
-                        </td>
-                      </tr>
-                    </table>
+                    <div class="ie_fix">
+                      <table border="0" cellpadding="0" cellspacing="0" width="100%">
+                        <tr>
+                          <td width="135" height="17" style="background-image:url(themes/eyeball/images/top_background_r1_c2.gif);background-repeat:no-repeat;"><img src="images/spacer.gif" width="135" height="17" border="0" alt="" /></td>
+
+                          <td width="100%" style="background-image:url(themes/eyeball/images/top_background_r1_c4.gif);background-repeat:repeat-x;"></td>
+
+                          <td width="135" height="17" style="background-image:url(themes/eyeball/images/top_background_r1_c5.gif);background-repeat:no-repeat;"><img src="images/spacer.gif" width="135" height="17" border="0" alt="" /></td>
+                        </tr>
+                      </table>
+                    </div>
                   </td>
                 </tr>
+
                 <tr>
                   <td>
-                    <table border="0" cellpadding="0" cellspacing="0" width="100%">
-                      <tr>
-                        <td>
-                          <img name="top_background_r2_c2" src="themes/eyeball/images/top_background_r2_c2.gif" width="55" height="25" border="0" id="top_background_r2_c2" alt="" />
-                        </td>
-                        <td align="center">
-                          {MAIN_MENU2}
-                        </td>
-                        <td>
-                          <img name="top_background_r2_c6" src="themes/eyeball/images/top_background_r2_c6.gif" width="55" height="25" border="0" id="top_background_r2_c6" alt="" />
-                        </td>
-                      </tr>
-                    </table>
+                    <div class="ie_fix">
+                      <table border="0" cellpadding="0" cellspacing="0" width="100%">
+                        <tr>
+                          <td><img name="top_background_r2_c2" src="themes/eyeball/images/top_background_r2_c2.gif" width="55" height="25" border="0" id="top_background_r2_c2" alt="" /></td>
+
+                          <td align="center">{SUB_MENU}</td>
+
+                          <td><img name="top_background_r2_c6" src="themes/eyeball/images/top_background_r2_c6.gif" width="55" height="25" border="0" id="top_background_r2_c6" alt="" /></td>
+                        </tr>
+                      </table>
+                    </div>
                   </td>
                 </tr>
               </table>
             </td>
-            <td width="49%" background="themes/eyeball/images/top_background_r1_c7.gif">
-            </td>
+
+            <td width="49%" style="background-image:url(themes/eyeball/images/top_background_r1_c7.gif);"></td>
           </tr>
         </table>
       </td>
     </tr>
   </table>
 
-  <table width="100%" border="0" align="center" cellpadding="0" cellspacing="20">
-    <tr>
-      <td align="center" valign="top">
-        {ADMIN_MENU}&nbsp;
-        {LANGUAGE_SELECT_FLAGS}
-        {GALLERY}
-      </td>
-    </tr>
-    <tr>
-      <td align="center" valign="top">
-        {THEME_SELECT_LIST}&nbsp;
-        {LANGUAGE_SELECT_LIST}
-      </td>
-    </tr>
-  </table>
-  {CUSTOM_FOOTER}
+  <div id="Menu1" class="topmenu">
+    <table border="0" cellpadding="0" cellspacing="0">
+      <tr>
+        <td>{SYS_MENU}</td>
+      </tr>
+    </table>
+  </div>
+
+  <div style="padding: 5px 20px;">
+    <table width="100%" border="0" cellpadding="0" cellspacing="0">
+      <tr>
+        <td valign="top">{ADMIN_MENU}&nbsp; {LANGUAGE_SELECT_FLAGS} {GALLERY}</td>
+      </tr>
+
+      <tr>
+        <td valign="top">
+          <div style="text-align:center;">
+            <div>
+              {THEME_SELECT_LIST}&nbsp; {LANGUAGE_SELECT_LIST}
+            </div>
+          </div>
+        </td>
+      </tr>
+    </table>
+  </div>{CUSTOM_FOOTER} {VANITY}
 </body>
 </html>
