--- a/devel/themes/hardwired/template.html
+++ b/devel/themes/hardwired/template.html
@@ -37,10 +37,10 @@
                 <tr>
                   <td height="108" valign="top">
                     <div align="right" class="topmenu">
-                      {MAIN_MENU1}
+                      {SYS_MENU}
                     </div>
                     <br />
-                    {MAIN_MENU2}
+                    {SUB_MENU}
                     <br />
                     <div align="center">
                       {THEME_SELECT_LIST}
@@ -70,20 +70,6 @@
 	<br /><br />
   </div>
   {CUSTOM_FOOTER}
-  
-  <!--  The buttons below are to show this theme is xhtml 1 transitional and css compliant.  If you have made no changes to your theme or code, you can un-comment them.  If you have made modifications, you must check that your site still validates before use of these buttons -->
-
-<!--
-  <div align="center"><p>
-  <a href="http://validator.w3.org/check?uri=referer"><img
-          src="http://www.w3.org/Icons/valid-xhtml10"
-          alt="Valid XHTML 1.0!" style="border:0;width:88px;height:31px" /></a>
-      
-		  <a href="http://jigsaw.w3.org/css-validator/">
-  <img style="border:0;width:88px;height:31px"
-       src="http://jigsaw.w3.org/css-validator/images/vcss" 
-       alt="Valid CSS!" />
- </a>
- </p></div> -->
+  {VANITY}
 </body>
 </html>
