--- a/devel/themes/eyeball/template.html
+++ b/devel/themes/eyeball/template.html
@@ -40,7 +40,7 @@ function MM_showHideLayers() { //v6.0
               <table border="0" cellpadding="0" cellspacing="0" width="100%">
                 <tr>
                   <td>
-                    <div class="ie_fix">
+                    <div>
                       <table border="0" cellpadding="0" cellspacing="0" width="100%">
                         <tr>
                           <td width="135" height="17" style="background-image:url(themes/eyeball/images/top_background_r1_c2.gif);background-repeat:no-repeat;"><img src="images/spacer.gif" width="135" height="17" border="0" alt="" /></td>
