--- a/devel/themes/rainy_day/template.html
+++ b/devel/themes/rainy_day/template.html
@@ -63,7 +63,7 @@
    <td><table border="0" cellpadding="0" cellspacing="0" width="100%">
           <tr>
            <td style="background-image:url(themes/rainy_day/images/template_r6_c1.gif)"><img src="themes/rainy_day/images/template_r6_c1.gif" width="42" height="328" border="0" alt="" /></td>
-              <td width="100%" align="center" style="background-image:url(themes/rainy_day/images/template_r6_c3.gif);padding-left: 10px; padding-right: 10px;">{ADMIN_MENU}
+              <td width="100%" style="background-image:url(themes/rainy_day/images/template_r6_c3.gif);padding-left: 10px; padding-right: 10px;">{ADMIN_MENU}
             {GALLERY} </td><td style="background-image:url(themes/rainy_day/images/template_r6_c9.gif)"><img src="themes/rainy_day/images/template_r6_c9.gif" width="42" height="328" border="0" alt="" /></td>
           </tr>
         </table></td>
