--- a/devel/themes/water_drop/template.html
+++ b/devel/themes/water_drop/template.html
@@ -27,11 +27,15 @@
         <img src="images/spacer.gif" width="1" height="15" alt="" />
         <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
           <tr>
-            <td align="left" valign="top">
+            <td valign="top">
               {ADMIN_MENU}
               {GALLERY}
+              <div style="text-align:center;">
+              <div>
 			  {LANGUAGE_SELECT_FLAGS}<br />
 			  {LANGUAGE_SELECT_LIST}{THEME_SELECT_LIST}
+			  </div>
+			  </div>
             </td>
           </tr>
         </table>
