--- a/devel/themes/eyeball/template.html
+++ b/devel/themes/eyeball/template.html
@@ -90,14 +90,15 @@ function MM_showHideLayers() { //v6.0
   <div style="padding: 5px 20px;">
     <table width="100%" border="0" cellpadding="0" cellspacing="0">
       <tr>
-        <td valign="top">{ADMIN_MENU}&nbsp; {LANGUAGE_SELECT_FLAGS} {GALLERY}</td>
+        <td valign="top">{ADMIN_MENU} {GALLERY}</td>
       </tr>
 
       <tr>
         <td valign="top">
           <div style="text-align:center;">
             <div>
-              {THEME_SELECT_LIST}&nbsp; {LANGUAGE_SELECT_LIST}
+              {THEME_SELECT_LIST}&nbsp; {LANGUAGE_SELECT_LIST}<br />
+              {LANGUAGE_SELECT_FLAGS}
             </div>
           </div>
         </td>
