--- a/devel/themes/igames/template.html
+++ b/devel/themes/igames/template.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
 <meta http-equiv="Pragma" content="no-cache" />
 {META}
-<link rel="stylesheet" href="themes/igames/style.css" />
+<link rel="stylesheet" href="themes/igames/style.css" type="text/css" />
 <script type="text/javascript" src="scripts.js"></script>
 <script language="JavaScript" type="text/JavaScript">
 <!--
