--- a/devel/themes/mac_ox_x/template.html
+++ b/devel/themes/mac_ox_x/template.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
 <meta http-equiv="Pragma" content="no-cache" />
 {META}
-<link rel="stylesheet" href="themes/mac_ox_x/style.css" />
+<link rel="stylesheet" href="themes/mac_ox_x/style.css" type="text/css" />
 <script type="text/javascript" src="scripts.js"></script>
 <script language="JavaScript" type="text/JavaScript">
 <!--
