--- a/devel/themes/rainy_day/template.html
+++ b/devel/themes/rainy_day/template.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset={CHARSET}" />
 <meta http-equiv="Pragma" content="no-cache" />
 {META}
-<link rel="stylesheet" href="themes/rainy_day/style.css" />
+<link rel="stylesheet" href="themes/rainy_day/style.css" type="text/css" />
 <script type="text/javascript" src="scripts.js"></script>
 <!-- $Id$ -->
 </head>
