--- a/stable/themes/hardwired/template.html
+++ b/stable/themes/hardwired/template.html
@@ -2,7 +2,7 @@
 <html dir="{LANG_DIR}">
 <head>
 <title>{TITLE}</title>
-<meta http-equiv="content-type" content="text/html; charset={charset}" />
+<meta http-equiv="content-type" content="text/html; charset={CHARSET}" />
 <meta http-equiv="Pragma" content="no-cache" />
 {META}
 <link rel="stylesheet" href="themes/hardwired/style.css" />
