--- a/stable/themes/fruity/template.html
+++ b/stable/themes/fruity/template.html
@@ -78,11 +78,9 @@
       <td id="m41">
         <table border="0" cellspacing="0" cellpadding="0" width="100%">
           <tr>
-            <td style="background-color:#6BBE10">&nbsp;
-            </td>
+            <td style="background-color:#6BBE10">&nbsp;</td>
             <td style="background-image:url(themes/fruity/images/lb_left.gif);background-repeat:no-repeat" width="126">
-              <img src="themes/fruity/images/blind.gif" width="1" height="55" border="0" alt="" />&nbsp;
-            </td>
+              <img src="themes/fruity/images/blind.gif" width="1" height="55" border="0" alt="" />&nbsp;</td>
           </tr>
         </table>
       </td>
@@ -98,8 +96,7 @@
             <td style="background-image:url(themes/fruity/images/left_bottom_left.gif);background-repeat:repeat-x">&nbsp;
             </td>
             <td style="background-image:url(themes/fruity/images/lb_bottom.gif);background-repeat:no-repeat" width="126">
-              <img src="themes/fruity/images/blind.gif" width="1" height="6" border="0" alt="" />&nbsp;
-            </td>
+              <img src="themes/fruity/images/blind.gif" width="1" height="6" border="0" alt="" />&nbsp;</td>
           </tr>
         </table>
       </td>
