--- a/devel/themes/classic/template.html
+++ b/devel/themes/classic/template.html
@@ -41,6 +41,7 @@
           </tr>
         </table>
         {ADMIN_MENU}
+        {ADMIN_BLOCK}
         <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
           <tr>
             <td align="left" valign="top">
