--- a/cpg1.5.x/themes/classic/template.html
+++ b/cpg1.5.x/themes/classic/template.html
@@ -12,46 +12,42 @@
 </head>
 <body>
   {CUSTOM_HEADER}
-  <table width="100%" border="0" cellpadding="20" cellspacing="20">
-    <tr>
-      <td valign="top" style="border: 1px solid #666666;background-color:#FFFFFF;">
-        <table width="100%" border="0" cellspacing="0" cellpadding="0">
-          <tr>
-            <td>
-              <a href="index.php"><img src="themes/classic/images/site_logo.png" border="0" alt="" /></a><br />
-            </td>
-            <td width="100%" align="center">
-              <h1>{GAL_NAME}</h1>
-              <h3>{GAL_DESCRIPTION}</h3><br />
-              {SYS_MENU} <br /> {SUB_MENU}
-            </td>
-          </tr>
-        </table>
-        <table width="100%" border="0" cellspacing="0" cellpadding="0">
-          <tr>
-            <td align="center" valign="top">
-              {LANGUAGE_SELECT_FLAGS}
-            </td>
-          </tr>
-          <tr>
-            <td align="center" valign="top">
-              {THEME_SELECT_LIST}
-              {LANGUAGE_SELECT_LIST}
-            </td>
-          </tr>
-        </table>
-        {ADMIN_MENU}
-        {MESSAGE_BLOCK}
-        <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
-          <tr>
-            <td align="left" valign="top">
-              {GALLERY}
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
+  <div id="cpg_main_block">
+    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+      <tr>
+        <td>
+          <a href="index.php"><img src="themes/classic/images/site_logo.png" border="0" alt="" /></a><br />
+        </td>
+        <td width="100%" align="center">
+          <h1>{GAL_NAME}</h1>
+          <h3>{GAL_DESCRIPTION}</h3><br />
+          {SYS_MENU} <br /> {SUB_MENU}
+        </td>
+      </tr>
+    </table>
+    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+      <tr>
+        <td align="center" valign="top">
+          {LANGUAGE_SELECT_FLAGS}
+        </td>
+      </tr>
+      <tr>
+        <td align="center" valign="top">
+          {THEME_SELECT_LIST}
+          {LANGUAGE_SELECT_LIST}
+        </td>
+      </tr>
+    </table>
+    {ADMIN_MENU}
+    {MESSAGE_BLOCK}
+    <table width="100%" border="0" align="center" cellpadding="0" cellspacing="0">
+      <tr>
+        <td align="left" valign="top">
+          {GALLERY}
+        </td>
+      </tr>
+    </table>
+  </div>
   {CUSTOM_FOOTER}{VANITY}{CREDITS}
 </body>
 </html>
